fix: reduce right margin of menu items for improved spacing

--- a/blowcomotion/static/scss/_header.scss
+++ b/blowcomotion/static/scss/_header.scss
@@ -47,7 +47,7 @@
         li {
             list-style: none;
             display: inline-block;
-            margin-right: 45px;
+            margin-right: 25px;
             position: relative;
 
             &.active {
